--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>title</title>
+  <title>title updated v2</title>
+<h1>This is a new element</h1>
 </head>
 <body>
 
